DEMO/hs.css
html {background-color: #535353}

/*那個類貼文造型的主要外觀*/
div {
font-family: Courier, Verdana, monospace;
margin: 0 auto;
height: 0 auto;}

/*副背景*/
.body {
width: 100vw;
max-width: 1210px;
margin: 0 auto;
background: #c6c6c6;
height: 0 auto;}

.body-inner {
max-width: 910px;
width: 100vw;
background: #eeeeee;
margin: 0 auto;
height: 0 auto;
padding: 10px 0 5px 0}

.pagename {
font-size: 36px;
text-align: center;}

.command {
font-size: 24px;}

.narration {
font-size: 18px;
text-align: center;}

img {
max-width: 910px;
width: 100vw;
height: 0 auto;
max-width: 100%;
margin: 15px 0;

/*段落文字們的位置*/
p {
max-width: 910px;
height: auto;
margin: 0 30px;
text-wrap: wrap;}

.next {
font-size: 12px;
text-align: left;}

